--- a/main.css
+++ b/main.css
@@ -1,14 +1,87 @@
-table {
-  border-collapse: collapse;
-  border-spacing: 20px;
+button {
+  width: 200px;
+  height: 50px;
+  animation-duration: 100ms;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-direction: alternate;
+  /* background-color: #f22; */
+  /* opacity: 1; */
 }
 
-th,
-td {
-  border: 2px solid #000;
-  border-bottom: 2px solid #000;
+button:hover {
+  animation-name: go;
 }
 
-tr {
-  border-bottom: 2px solid #000;
+@keyframes go {
+  0% {
+    opacity: 1;
+  }
+  25% {
+
+  }
+  50% {
+
+  }
+  75% {
+    
+  }
+  100% {
+    opacity: 0;
+  }
 }
+
+/* @keyframes go {
+  0% {
+    transform: skew(10deg);
+  }
+  100% {
+    transform: skew(-10deg);
+  }
+} */
+
+/* @keyframes go {
+  0% {
+    transform: scale(1);
+    background-color: #f22;
+  }
+  100% {
+    transform: scale(2);
+    background-color: #00ff00;
+  }
+} */
+
+.box {
+  /* animation-name: animate; */
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+/* @keyframes animate {
+  0% {
+    width: 0;
+    height: 0;
+    background-color: #f33;
+  }
+  100% {
+    width: 100px;
+    height: 100px;
+    background-color: #ff0;
+  }
+} */
+
+/* @keyframes animate {
+  0% {
+    width: 0;
+    height: 0;
+  }
+  50% {
+    width: 100px;
+    height: 100px;
+  }
+  100% {
+    width: 0px;
+    height: 0px;
+  }
+} */
