--- a/main.css
+++ b/main.css
@@ -1,87 +1,46 @@
-button {
-  width: 200px;
-  height: 50px;
-  animation-duration: 100ms;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-  animation-direction: alternate;
-  /* background-color: #f22; */
-  /* opacity: 1; */
+body {
+  margin: 0;
 }
 
-button:hover {
-  animation-name: go;
+section {
+  padding: 20px;
+  display: grid;
+  height: 100vh;
+  gap: 1px;
+  /* grid-template-columns: repeat(3, 100px);
+  grid-template-rows: repeat(3, 100px); */
+  /* justify-content: center;
+  align-content: center; */
+  /* justify-content: space-evenly;
+  align-content: space-around; */
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  /* justify-items: center;
+  align-items: center; */
+  /* justify-items: end;
+  align-items: end; */
 }
 
-@keyframes go {
-  0% {
-    opacity: 1;
-  }
-  25% {
-
-  }
-  50% {
-
-  }
-  75% {
-    
-  }
-  100% {
-    opacity: 0;
-  }
+div {
+  background-color: #123;
+  width: 100px;
+  height: 100px;
 }
 
-/* @keyframes go {
-  0% {
-    transform: skew(10deg);
-  }
-  100% {
-    transform: skew(-10deg);
-  }
-} */
-
-/* @keyframes go {
-  0% {
-    transform: scale(1);
-    background-color: #f22;
-  }
-  100% {
-    transform: scale(2);
-    background-color: #00ff00;
-  }
-} */
-
-.box {
-  /* animation-name: animate; */
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
+div:first-child, 
+div:nth-child(2) {
+  align-self: center;
+  justify-self: center;
 }
 
-/* @keyframes animate {
-  0% {
-    width: 0;
-    height: 0;
-    background-color: #f33;
-  }
-  100% {
-    width: 100px;
-    height: 100px;
-    background-color: #ff0;
-  }
-} */
+div:nth-child(3) {
+  align-self: center;
+  justify-self: end;
+}
 
-/* @keyframes animate {
-  0% {
-    width: 0;
-    height: 0;
-  }
-  50% {
-    width: 100px;
-    height: 100px;
-  }
-  100% {
-    width: 0px;
-    height: 0px;
-  }
-} */
+div:nth-child(5) {
+  background-color: #0f0;
+  justify-self: center;
+  align-self: center;
+}
+
