--- a/main.css
+++ b/main.css
@@ -1,13 +1,3 @@
-[data-h1] {
-  /* styles */
-}
-
-body {
-  /* background-color: #f11; */
-}
-
-.my-new-class {
-  color: #f11;
-  font-size: 40px;
-  text-decoration: underline;
+.toggle-background {
+  background-color: #456;
 }
